Closed
Bug 244140
Opened 21 years ago
Closed 21 years ago
Listitem should support type "checkbox".
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Louie.Zhao, Assigned: aaronlev)
Details
Attachments
(1 file, 1 obsolete file)
|
3.15 KB,
patch
|
Henry.Jia
:
superreview+
|
Details | Diff | Splinter Review |
Steps to Reproduce:
1. Start Mozilla and Gnopernicus.
2. Click Edit->Preferences.
3. Click Advanced->Scripts & Plug-ins.
4. Focus on the listitem of Allow Scripts to.
5. Click space to check/uncheck items.
Bug:
Gnopernicus can't read the status of the checkbox if the checkbox is list item.
Please refer to
http://www.xulplanet.com/references/elemref/ref_listitem.html#attr_type. The
current listitem implementation in A11y doesn't support "checkbox".
| Reporter | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Comment 2•21 years ago
|
||
Comment on attachment 148924 [details] [diff] [review]
patch v1
But change isCheckbox to mIsCheckbox
Attachment #148924 -
Flags: review+
| Reporter | ||
Comment 3•21 years ago
|
||
Following Aron's advise.
Attachment #148924 -
Attachment is obsolete: true
| Reporter | ||
Updated•21 years ago
|
Attachment #149393 -
Flags: superreview?(Henry.Jia)
Attachment #149393 -
Flags: superreview?(Henry.Jia) → superreview+
| Reporter | ||
Comment 4•21 years ago
|
||
Thanks for sr & r. Patch checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•