bug 244140 Listitem should support type "checkbox". r = aaron sr= henry.jia@sun.com